--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/css/style.css' />
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Web-Skill Tree : Electronics</title>
+   <link rel='stylesheet' href='/css/style.css'/>
     <!-- <script type="module" src="/js/main.js"></script> -->
-    <script type="module" src="/js/scripts/scraper.js"></script>
+    <!--script type="module" src="/js/scripts/scraper.js"></script-->
+    <script src="/js/scripts/skillsPanel.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/6.0.0-beta3/css/all.min.css">
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1>ELECTRONICS</h1>
+    <!-- Contenedor para los hexagonos -->
+    <div id="svg-container" class="svg-container">
+      <!-- EXISTING SVGs -->
+    </div>
   </body>
 </html>
