Añadida la barrar amarilla que indica la skill seleccionada

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,5 +16,10 @@
     <div id="svg-container" class="svg-container">
       <!-- EXISTING SVGs -->
     </div>
+
+    <div id="skill-description" style="position: fixed; bottom: 0; left: 0; width: 100%; background-color: #f5e589; border-top: 2px solid black; padding: 10px; display: none; text-align: center; font-weight: bold; font-size: 0.9em;">
+        <!-- Skill description -->
+    </div>
+
   </body>
 </html>
