--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,9 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Web-Skill Tree : Electronics</title>
    <link rel='stylesheet' href='/css/style.css'/>
-    <!-- <script type="module" src="/js/main.js"></script> -->
-    <!--script type="module" src="/js/scripts/scraper.js"></script-->
     <script src="/js/scripts/skillsPanel.js"></script>
+    <script src="/js/scripts/redGreenCircles.js"></script>
+    <link rel='stylesheet' href='/css/redGreenCircles.css'/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/6.0.0-beta3/css/all.min.css">
   </head>
   <body>
