--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,19 +5,22 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Web-Skill Tree : Electronics</title>
    <link rel='stylesheet' href='/css/style.css'/>
-    <script src="/js/scripts/skillsPanel.js"></script>
+    <script src="/js/main.js"></script>
     <script src="/js/scripts/redGreenCircles.js"></script>
     <link rel='stylesheet' href='/css/redGreenCircles.css'/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/6.0.0-beta3/css/all.min.css">
   </head>
   <body>
+    <div class="user-bar"> Hello admin! | <a href="../html/leaderboard.html">leaderboard</a></div>
     <h1>ELECTRONICS</h1>
+
+
     <!-- Contenedor para los hexagonos -->
     <div id="svg-container" class="svg-container">
       <!-- EXISTING SVGs -->
     </div>
 
-    <div id="skill-description" style="position: fixed; bottom: 0; left: 0; width: 100%; background-color: #f5e589; border-top: 2px solid black; padding: 10px; display: none; text-align: center; font-weight: bold; font-size: 0.9em;">
+    <div id="skill-description" class="skill-description">
         <!-- Skill description -->
     </div>
 
