--- a/public/css/style.css
+++ b/public/css/style.css
@@ -125,3 +125,36 @@ footer {
   background-color: #f0f0f0; /* Light background color */
   border-top: 1px solid #ccc; /* Border on top */
 }
+
+.skill-description {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #f5e589;
+  border-top: 2px solid black;
+  padding: 10px;
+  display: none;
+  text-align: center;
+  font-weight: bold;
+  font-size: 0.9em;
+}
+
+.user-bar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  background-color: #f5e589; /* Mismo color de skill-description */
+  padding: 10px;
+  font-weight: bold;
+  font-size: 0.9em;
+  font-family: Arial, sans-serif; /* Mismo tipo de letra */
+}
+.user-bar a {
+  color: #1a73e8;
+  text-decoration: none;
+}
+
+.user-bar a:hover {
+  text-decoration: underline;
+}
