--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaderboard</title>
-    <link rel="stylesheet" href="/css/leaderboard.css">
+    <link rel="stylesheet" href="/css/userLeaderboard.css">
     <script src="/js/leaderboard.js"></script>
 </head>
 <body>
