--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -21,6 +21,7 @@
                     <th>Username</th>
                     <th>Score</th>
                     <th>Badge</th>
+                    <th>Range</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -35,6 +36,7 @@
                             <td><%= user.username %></td>
                             <td><%= user.score %></td>
                             <td><img src="/images/badges/<%= user.badge %>" alt="<%= medal %> Badge" class="badge-img"></td>
+                            <td> <%= medal %></td>
                         </tr>
                     <% }); %>
                 <% } %>
