Modificación username-display.ejs

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -137,8 +137,11 @@
             margin: 0 10px;
         }
     </style>
+    <link rel='stylesheet' href='/css/style.css'/>
 </head>
 <body>
+    <!-- Incluir el partial de cabecera -->
+    <%- include('partials/username-display') %>
     <div class="login-container">
         <h1>Login</h1>
         <p class="message">Please log in to view that resource</p>
