--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,10 @@
    <title>Web-Skill Tree : <%= skillTreeName.toUpperCase()%></title>
    <link rel='stylesheet' href='/css/style.css'/>
     <script>
-      // Load session data
-      const skillsData = <%- JSON.stringify(skills) %>;
-      const currentUser = <%- JSON.stringify(user || null) %>;
+        // Load session data
+        const skillsData = <%- JSON.stringify(skills) %>;
+        const currentUser = <%- JSON.stringify(user || null) %>;
+        const skillTreeName = <%- JSON.stringify(skillTreeName) %>;
     </script>
     <script src="/js/main.js"></script>
     <script src="/js/scripts/redGreenCircles.js"></script>
@@ -16,7 +17,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/6.0.0-beta3/css/all.min.css">
   </head>
   <body>
-  <div class="user-bar"> Hello admin! | <a href="/leaderboard">Leaderboard</a> | <a href="/logout">Logout</a> </div>
+<!--  <div class="user-bar"> Hello admin! | <a href="/leaderboard">Leaderboard</a> | <a href="/logout">Logout</a> </div>-->
+    <!-- Incluir el partial de cabecera -->
+    <%- include('partials/username-display') %>
     <h1><%= skillTreeName.toUpperCase()%></h1>
     <% if (user.admin) { %>
         <br>
