--- a/views/partials/username-display.ejs
+++ b/views/partials/username-display.ejs
@@ -1,30 +1,19 @@
+<!--<div class="user-bar"> Hello admin! | <a href="/leaderboard">Leaderboard</a> | <a href="/logout">Logout</a> </div>-->
 <div class="user-bar">
     <% if (user) { %> <!-- Cuando el usuario está autenticado -->
-    <span>Welcome, <%= user.username %>!</span>
-    <nav>
-        <ul>
-            <!-- Relación de árboles de competencias -->
-            <% skillTrees.forEach(tree => { %>
-                <li>
-                    <a href="/skills/<%= tree.name %>">
-                        <%= tree.displayName %> (<%= tree.competenciesCount %>)
-                    </a>
-                </li>
-            <% }) %>
-            <li><a href="/leaderboard">Leaderboard</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/logout">Logout</a></li>
-            <% if (user.admin) { %>
-                <li><a href="/admin">Admin Panel</a></li>
-            <% } %>
-        </ul>
-    </nav>
+        Hello <%= user.username %>! |
+        <a href="/skills/<%= skillTreeName %>">
+            <%= skillTreeName %> (<%= skills.length %>)
+        </a> |
+        <a href="/leaderboard">Leaderboard</a> |
+        <a href="/about">About</a> |
+        <a href="/logout">Logout</a>
+        <% if (user.admin) { %>
+            | <a href="/admin">Admin Dashboard</a>
+        <% } %>
+
     <% } else { %> <!-- Cuando la sesión no está inicializada -->
-    <nav>
-        <ul>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/about">About</a></li>
-        </ul>
-    </nav>
+        <a href="/login">Login</a> |
+        <a href="/about">About</a>
     <% } %>
 </div>
