--- a/views/register.ejs
+++ b/views/register.ejs
@@ -91,28 +91,31 @@
             text-decoration: underline;
         }
     </style>
+    <link rel='stylesheet' href='/css/style.css'/>
 </head>
 <body>
-<div class="register-container">
-    <h1>Register</h1>
-    <p class="message">Please register to create your account</p>
-    <%- include('./partials/messages') %>
-    <form action="/users/register" method="POST">
-        <div>
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-        </div>
-        <div>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-        </div>
-        <div>
-            <label for="password2">Confirm Password:</label>
-            <input type="password" id="password2" name="password2" required>
-        </div>
-        <button type="submit">Register</button>
-    </form>
-    <p>Already have an account? <a href="/">Login here</a></p>
-</div>
+    <!-- Incluir el partial de cabecera -->
+    <%- include('partials/username-display') %>
+    <div class="register-container">
+        <h1>Register</h1>
+        <p class="message">Please register to create your account</p>
+        <%- include('./partials/messages') %>
+        <form action="/users/register" method="POST">
+            <div>
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <div>
+                <label for="password2">Confirm Password:</label>
+                <input type="password" id="password2" name="password2" required>
+            </div>
+            <button type="submit">Register</button>
+        </form>
+        <p>Already have an account? <a href="/">Login here</a></p>
+    </div>
 </body>
 </html>
