--- a/views/partials/username-display.ejs
+++ b/views/partials/username-display.ejs
@@ -10,7 +10,7 @@
         <a href="/about">About</a> |
         <a href="/users/logout">Logout</a>
         <% if (user.admin) { %>
-            | <a href="/admin">Admin Dashboard</a>
+            | <a href="/admin/dashboard">Admin Dashboard</a>
         <% } %>
 
     <% } else { %> <!-- Cuando la sesión no está inicializada -->
