--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -150,7 +150,7 @@
                             <td><%= index + 1 %></td>
                             <td><%= user.username %></td>
                             <td><%= user.score %></td>
-                            <td><img src="/badges/<%= user.badge %>" alt="<%= medal %> Badge" class="badge-img"></td>
+                            <td><img src="<%= user.badge %>" alt="<%= medal %> Badge" class="badge-img"></td>
                             <td> <%= medal %></td>
                         </tr>
                     <% }); %>
