--- a/views/admin-users.ejs
+++ b/views/admin-users.ejs
@@ -17,36 +17,38 @@
     </script>
 </head>
 <body>
-<h1>Manage Users</h1>
-<table>
-    <thead>
-    <tr>
-        <th>Username</th>
-        <th>Admin</th>
-        <th>Actions</th>
-    </tr>
-    </thead>
-    <tbody>
-    <% users.forEach((user, index) => { %>
+    <!-- Incluir el partial de cabecera -->
+    <%- include('partials/username-display') %>
+    <h1>Manage Users</h1>
+    <table>
+        <thead>
         <tr>
-            <td><%= user.username %></td>
-            <td><%= user.admin ? 'Yes' : 'No' %></td>
-            <td class="actions">
-                <button class="edit" onclick="showChangePasswordForm(<%= index %>)">Change Password</button>
-            </td>
+            <th>Username</th>
+            <th>Admin</th>
+            <th>Actions</th>
         </tr>
-    <% }) %>
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+        <% users.forEach((user, index) => { %>
+            <tr>
+                <td><%= user.username %></td>
+                <td><%= user.admin ? 'Yes' : 'No' %></td>
+                <td class="actions">
+                    <button class="edit" onclick="showChangePasswordForm(<%= index %>)">Change Password</button>
+                </td>
+            </tr>
+        <% }) %>
+        </tbody>
+    </table>
 
-<div id="change-password-form" style="display: none; margin-top: 20px;">
-    <h2>Change Password</h2>
-    <form action="/admin/change-password" method="POST">
-        <input type="hidden" id="username" name="username" value="">
-        <label for="password">New Password:</label>
-        <input type="password" id="password" name="password" required>
-        <button type="submit" class="edit">Change Password</button>
-    </form>
-</div>
-</body>
+    <div id="change-password-form" style="display: none; margin-top: 20px;">
+        <h2>Change Password</h2>
+        <form action="/admin/change-password" method="POST">
+            <input type="hidden" id="username" name="username" value="">
+            <label for="password">New Password:</label>
+            <input type="password" id="password" name="password" required>
+            <button type="submit" class="edit">Change Password</button>
+        </form>
+    </div>
+    </body>
 </html>
