--- a/views/skillNotebook.ejs
+++ b/views/skillNotebook.ejs
@@ -11,8 +11,7 @@
         function cargarDatos() {
             const taskCheckboxes = document.querySelectorAll(".task-checkbox");
             const formContainer = document.getElementById("form-group");
-            //const storageKey = `skill_${<%= user.id %>}_${<%= skill.taskID %>}`;
-            const storageKey = "skill_<%= user.id %>_<%= skill.taskID %>";
+            const storageKey = "skill_<%= user.username %>_<%= skill.taskID %>";
 
 
 
