Solucionado problema para visualizar el rango del usuario

--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -148,7 +148,7 @@
                             <td><%= user.username %></td>
                             <td><%= user.score %></td>
                             <td><img src="<%= user.badge %>" alt="<%= medal %> Badge" class="badge-img"></td>
-                            <td> <%= medal %></td>
+                            <td> <%= user.range %></td>
                         </tr>
                     <% }); %>
                 <% } %>
